Fixed spacing issues, removed widget overlay z-index

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -1619,11 +1619,3 @@ hr.line {
 .widget.soundcloud, .widget.facebookcomments, .widget.donation, .widget.yelpreview {
 	margin-bottom: 50px;
 }
-
-// -----------------------------
-// 15. WIDGET OVERLAY
-// -----------------------------
-
-.widget-overlay {
-	z-index: 1000 !important;
-}
